adding cath link to fact start page

--- a/src/main/locales/cy/home.json
+++ b/src/main/locales/cy/home.json
@@ -4,6 +4,13 @@
   "p1": "Defnyddiwch y gwasanaeth hwn i ddod o hyd i lys neu dribiwnlys yng Nghymru neu Loegr",
   "bullets": ["cyfeiriad", "manylion cyswllt", "amseroedd agor", "gwybodaeth am yr adeilad e.e. mynediad i’r anabl neu parcio", "fy helpu i gael diweddariad"],
   "button": "Dechrau rŵan",
+  "h3": "Gwrandawiad a gwybodaeth achos",
+  "p5_link_text": "Dod o hyd i wybodaeth am wrandawiadau ac achosion gweithdrefn cyfiawnder sengl",
+  "p5_link": "https://pip-frontend.demo.platform.hmcts.net/",
+  "p5_text": " mewn llysoedd a thribiwnlysoedd yng Nghymru a Lloegr",
+  "p6_text": "Gall gweithwyr proffesiynol y gyfraith a'r cyfryngau ",
+  "p6_link_text": "Mewngofnodi",
+  "p6_Link": "#",
   "h2": "Cyn chwilio",
   "p_fee_advice": "Ni allwch ddefnyddio’r gwasanaeth hwn i dalu ffioedd llys.",
   "p1_text": "Mae’r gwasanaeth ar-lein ar gael hefyd yn ",
