--- a/src/main/locales/en/home.json
+++ b/src/main/locales/en/home.json
@@ -4,6 +4,13 @@
   "p1": "Use this service to find a court or tribunal in England and Wales",
   "bullets": ["address", "contact details", "opening times", "building information e.g. disabled access or parking", "to help me get an update"],
   "button": "Start now",
+  "h3": "Hearing and case information",
+  "p5_link_text": "Find information about hearings and single justice procedure cases",
+  "p5_link": "https://pip-frontend.demo.platform.hmcts.net/",
+  "p5_text": " at courts and tribunals in England and Wales",
+  "p6_text": "Legal and media professionals can ",
+  "p6_link_text": "sign in",
+  "p6_Link": "#",
   "h2": "Before you search",
   "p_fee_advice": "You cannot use this service to pay court fees.",
   "p1_text": "The online service is also available in ",
