--- a/src/main/locales/cy/search/location.json
+++ b/src/main/locales/cy/search/location.json
@@ -5,6 +5,7 @@
   "serviceName": "Dod o hyd i lys neu dribiwnlys",
   "question": "Beth yw enw a chyfeiriad y llys neu’r tribiwnlys?",
   "hint": "Gellir gweld enw’r llys neu’r tribiwnlys ar lythyr, e-bost neu neges testun a anfonwyd gennym.",
+  "courtHistoryText": "Mae’r llys neu dribiwnlys yr ydych yn chwilio amdano wedi’i ail-lenwi",
   "text": "Rhowch enw llys, cyfeiriad, tref neu ddinas",
   "textExample": "Er enghraifft, Llys Teulu Blackburn. ",
   "button": "Parhau",
