--- a/src/main/locales/en/search/location.json
+++ b/src/main/locales/en/search/location.json
@@ -5,7 +5,8 @@
   "serviceName": "Find a Court or Tribunal",
   "question": "What is the name or address of the court or tribunal?",
   "hint": "The name of the court or tribunal can be found on a letter, email or text from us.",
-  "courtHistoryText": "The court or tribunal you are searching for has been renamed to ",
+  "courtHistoryText": "The court or tribunal you are searching for may have been renamed from ",
+  "to": " to ",
   "text": "Enter a court name, address, town or city",
   "textExample": "For example, Blackburn Family Court. ",
   "button": "Continue",
