added official welsh translation

--- a/src/main/locales/cy/search/location.json
+++ b/src/main/locales/cy/search/location.json
@@ -5,7 +5,7 @@
   "serviceName": "Dod o hyd i lys neu dribiwnlys",
   "question": "Beth yw enw a chyfeiriad y llys neu’r tribiwnlys?",
   "hint": "Gellir gweld enw’r llys neu’r tribiwnlys ar lythyr, e-bost neu neges testun a anfonwyd gennym.",
-  "courtHistoryText": "Mae'r lleoliad hwn wedi'i ailenwi o ",
+  "courtHistoryText": "Mae enw’r lleoliad hwn wedi newid o ",
   "to": " i ",
   "text": "Rhowch enw llys, cyfeiriad, tref neu ddinas",
   "textExample": "Er enghraifft, Llys Teulu Blackburn. ",
