FACT-2226 accessability update

--- a/src/main/locales/cy/accessibility-statement.json
+++ b/src/main/locales/cy/accessibility-statement.json
@@ -4,11 +4,11 @@
   "h1": "Datganiad hygyrchedd ar gyfer y gwasanaeth ‘Dod o hyd i lys neu dribiwnlys’",
   "p1": "Mae’r datganiad hygyrchedd hwn yn berthnasol i gynnwys a gyhoeddir ar <a class=\"govuk-link\" href=\"http://www.find-court-tribunal.service.gov.uk/?lng=cy\">www.find-court-tribunal.service.gov.uk/?lng=cy</a>",
   "p2": "Gwasanaeth Llysoedd a Thribiwnlysoedd EM sy’n gyfrifol am y wefan hon. Rydym eisiau i gymaint o bobl â phosibl allu defnyddio'r wefan hon, felly rydym wedi ceisio ei gwneud mor hygyrch â phosibl. Er enghraifft, golyga hyn y dylech allu:",
-  "bullets": ["newid y lliwiau, y lefelau cyferbyniad a’r ffontiau", "gwneud y testun hyd at 300% yn fwy heb iddo ddiflannu oddi ar y sgrin", "mynd drwy’r rhan fwyaf o'r wefan gan ddefnyddio bysellfwrdd yn unig", "mynd drwy’r rhan fwyaf o'r wefan gan ddefnyddio meddalwedd adnabod llais", "gwrando ar y rhan fwyaf o'r wefan gan ddefnyddio darllenydd sgrin (gan gynnwys fersiynau diweddaraf JAWS, NVDA a VoiceOver)"],
+  "bullets": ["newid y lliwiau, y lefelau cyferbyniad a’r ffontiau neu gosodiadau’r dyfais", "gwneud y testun hyd at 400% yn fwy heb iddo ddiflannu oddi ar y sgrin", "mynd drwy’r rhan fwyaf o'r wefan gan ddefnyddio bysellfwrdd yn unig", "mynd drwy’r rhan fwyaf o'r wefan gan ddefnyddio meddalwedd adnabod llais", "gwrando ar y rhan fwyaf o'r wefan gan ddefnyddio darllenydd sgrin (gan gynnwys fersiynau diweddaraf JAWS, NVDA a VoiceOver)"],
   "p3": "Rydym hefyd wedi sicrhau ein bod wedi defnyddio iaith syml ar y wefan.",
   "p4": "Mae gan <a class=\"govuk-link\" href=\"https://mcmw.abilitynet.org.uk/\">AbilityNet</a> gyngor ynghylch gwneud eich dyfais yn haws i’w defnyddio os oes gennych anabledd.",
   "h13": "Pa mor hygyrch yw'r wefan hon",
-  "p21": "Mae’r wefan wedi’i phrofi gan y Ganolfan Hygyrchedd Digidol (DAC) ac mae’n bodloni’r lefel ofynnol o hygyrchedd ar gyfer cydymffurfio â Chanllawiau Hygyrchedd Cynnwys Gwe F2.1.",
+  "p21": "Mae’r gwasanaeth yn defnyddio arddulliau, patrymau a chydrannau cyffredin o System Ddylunio GOV.UK sy'n cael eu hystyried yn hygyrch.",
   "h3": "Adborth a gwybodaeth gyswllt",
   "p6": "Os ydych angen gwybodaeth sydd ar y wefan hon mewn fformat arall megis ar ffurf PDF hygyrch, print bras, fformat hawdd ei ddarllen neu recordiad sain neu Braille:",
   "bullet1": "e-bost <a class=\"govuk-link\" href=\"mailto:hmctsfinderfeedback@justice.gov.uk\">hmctsfinderfeedback@justice.gov.uk</a>",
@@ -22,12 +22,14 @@
   "p11": "Rydym yn darparu gwasanaeth cyfnewid negeseuon testun ar gyfer pobl fyddar, pobl sydd â nam ar eu clyw a phobl sydd â nam ar eu lleferydd.",
   "p12": "Mae yna ddolenni sain yn ein llysoedd a’n tribiwnlysoedd, neu os byddwch yn cysylltu â ni cyn eich ymweliad, gallwn drefnu cyfieithydd Iaith Arwyddion Prydain (BSL) ar eich cyfer.",
   "h7": "Gwybodaeth dechnegol am hygyrchedd y wefan hon",
-  "p13": "Mae Gwasanaeth Llysoedd a Thribiwnlysoedd EM wedi ymrwymo i sicrhau bod ei wefan yn hygyrch, yn unol â Rheoliadau Hygyrchedd Cyrff y Sector Cyhoeddus (Gwefannau a Rhaglenni Symudol) (Rhif 2) 2018.",
+  "p13": "Mae Gwasanaeth Llysoedd a Thribiwnlysoedd EF wedi ymrwymo i sicrhau bod ei wefan yn hygyrch, yn unol â Rheoliadau Hygyrchedd Cyrff y Sector Cyhoeddus (Gwefannau a Rhaglenni Symudol) (Rhif 2) 2018.",
   "h8": "Statws cydymffurfiaeth",
-  "p14": "Mae’r wefan hon yn cydymffurfio’n llawn â’r Canllawiau Hygyrchedd Cynnwys Gwe fersiwn 2.1 safon AA.",
+  "p14": "Mae’r wefan hon yn cydymffurfio’n llawn â’r Canllawiau Hygyrchedd Cynnwys Gwe fersiwn 2.2 safon AA.",
+  "h14": "Beth rydym yn ei wneud i wella hygyrchedd",
+  "p23": "Rydym yn cynnal profion awtomataidd yn barhaus gan ddefnyddio <a class=\"govuk-link\" href=\"https://pa11y.org/\">Pa11y</a> ym mhob cam o adeiladu. Rydym hefyd yn gweithio gyda thîm mewnol Canolfan Ragoriaeth Hygyrchedd GLlTEF i sicrhau ein bod yn dilyn arferion hygyrchedd gorau ac i gael cymorth gydag archwiliadau.",
   "h9": "Paratoi’r datganiad hygyrchedd hwn",
-  "p15": "Cafodd y datganiad hwn ei baratoi ar 3 Rhagfyr 2020. Cafodd ei adolygu ddiwethaf ar 24 Mehefin 2022.",
-  "p16": "Profwyd y wefan hon ar bob cam o’i hadeiladu ac mae’n destun prof <a class=\"govuk-link\" href=\"https://pa11y.org/\">Pa11y</a> trwy gydol Mai 2022 ac asesiad <a class=\"govuk-link\" href=\"https://digitalaccessibilitycentre.org/\">Digital Accessibility Centre(DAC)</a> llawn ar 14 Mehefin 2022.",
+  "p15": "Cafodd y datganiad hwn ei baratoi ar 3 Rhagfyr 2020. Cafodd ei adolygu ddiwethaf ar 8 Ebrill 2025.",
+  "p16": "Cafodd y wefan hon ei harchwilio gan dîm mewnol Canolfan Ragoriaeth Hygyrchedd GLlTEF ar 6 Ionawr 2025 ar draws ystod o dechnolegau cynorthwyol ac offer awtomataidd.",
   "p17": "Dyma ddyfyniad o’r adroddiad DAC yn esbonio eu methodoleg:",
   "h10": "Y weithdrefn brofi:",
   "p18": "“Mae'r gwasanaeth yn cael ei brofi gan dîm o archwilwyr a dadansoddwyr profiadol, llawer ohonynt yn unigolion anabl ac yn ddefnyddwyr technoleg addasol. Mae'r cyfuniad o adborth goddrychol gan ddefnyddwyr anabl ac archwiliadau technegol cynhwysfawr yn ein galluogi i fesur sut mae'r gwasanaeth yn perfformio'n dechnegol ac yn ymarferol, gan gynnig dimensiwn ychwanegol hanfodol i ganlyniadau ein profion na all dulliau eraill o brofi eu darparu.”",
