--- a/src/main/locales/en/accessibility-statement.json
+++ b/src/main/locales/en/accessibility-statement.json
@@ -4,11 +4,11 @@
   "h1": "Accessibility statement for the ‘Find a Court or Tribunal’ service",
   "p1": "This accessibility statement applies to content published on <a class=\"govuk-link\" href=\"http://www.find-court-tribunal.service.gov.uk\">www.find-court-tribunal.service.gov.uk</a>",
   "p2": "This website is run by HM Courts and Tribunals. We want as many people as possible to be able to use this website, so we have designed it to be accessible. For example, that means you should be able to:",
-  "bullets": ["change colours, contrast levels and fonts", "zoom in up to 300% without the text spilling off the screen", "navigate most of the website using just a keyboard", "navigate most of the website using speech recognition software", "listen to most of the website using a screen reader (including the most recent versions of JAWS, NVDA and VoiceOver)"],
+  "bullets": ["change colours, contrast levels and fonts using browser or device settings", "zoom in up to 400% without the text spilling off the screen", "navigate most of the website using just a keyboard", "navigate most of the website using speech recognition software", "listen to most of the website using a screen reader (including the most recent versions of JAWS, NVDA and VoiceOver)"],
   "p3": "We’ve also made the website text as simple as possible to understand.",
   "p4": "<a class=\"govuk-link\" href=\"https://mcmw.abilitynet.org.uk/\">AbilityNet</a> has advice on making your device easier to use if you have a disability.",
   "h13": "How accessible this website is",
-  "p21": "The website has been tested by the Digital Accessibility Centre (DAC) and meets the required level of accessibility for compliance with the Web Content Accessibility Guidelines v 2.1.",
+  "p21": "The service is using common styles, patterns and components from the GOV.UK Design System which are widely regarded as accessible.",
   "h3": "Feedback and contact information",
   "p6": "If you need information on this website in a different format like accessible PDF, large print, easy read or audio recording or braille:",
   "bullet1": "email <a class=\"govuk-link\" href=\"mailto:hmctsfinderfeedback@justice.gov.uk\">hmctsfinderfeedback@justice.gov.uk</a>",
@@ -22,12 +22,14 @@
   "p11": "We provide a text relay service for people who are D/deaf, hearing impaired or have a speech impediment.",
   "p12": "Our courts and tribunals have audio induction loops, or if you contact us before your visit we can arrange a British Sign Language (BSL) interpreter.",
   "h7": "Technical information about this website’s accessibility",
-  "p13": "HM Courts and Tribunal Service is committed to making its websites accessible, in accordance with the Public Sector Bodies (Websites and Mobile Applications) (No. 2) Accessibility Regulations 2018.",
+  "p13": "HM Courts and Tribunal Services are committed to making its websites accessible, in accordance with the Public Sector Bodies (Websites and Mobile Applications) (No. 2) Accessibility Regulations 2018.",
   "h8": "Compliance status",
-  "p14": "This website is fully compliant with the Web Content Accessibility Guidelines version 2.1 AA standard.",
+  "p14": "This website is fully compliant with the Web Content Accessibility Guidelines version 2.2 AA standard.",
+  "h14": "What we’re doing to improve accessibility",
+  "p23": "We continually run automated tests using <a class=\"govuk-link\" href=\"https://pa11y.org/\">Pa11y</a> at all stages of build. We also work with the internal HMCTS Accessibility Testing Centre of Excellence team to ensure we are following best accessibility practices and for support with audits.",
   "h9": "Preparation of this accessibility statement",
-  "p15": "This statement was prepared on 3 December 2020. It was last reviewed on 24 June 2022.",
-  "p16": "This website was tested at all stages of its build and subjected to <a class=\"govuk-link\" href=\"https://pa11y.org/\">Pa11y</a> testing throughout May 2022 and a full <a class=\"govuk-link\" href=\"https://digitalaccessibilitycentre.org/\">Digital Accessibility Centre(DAC)</a> assessment on 14 June 2022.",
+  "p15": "This statement was prepared on 3 December 2020. It was last reviewed on 08 April 2025.",
+  "p16": "This website was audited by the internal HMCTS Accessibility Testing Centre of Excellence team on 6 January 2025 across a range of assistive technologies and automated tools.",
   "p17": "This is an excerpt from the DAC report explaining their methodology:",
   "h10": "Testing procedure:",
   "p18": "“The service is tested by a team of experienced auditors and analysts, many of whom are disabled individuals and users of adaptive technology. The combination of subjective pan-disability user feedback and comprehensive technical auditing allows us to measure how the service performs technically and practically, thereby offering an essential added dimension to our test results that other methods of testing cannot provide.”",
