--- a/src/main/locales/cy/notFound.json
+++ b/src/main/locales/cy/notFound.json
@@ -1,5 +1,6 @@
 {
   "title": "Ni ellir dod o hyd i'r dudalen - Dod o hyd i Lys neu Dribiwnlys - GOV.UK",
+  "serviceName": "Dod o hyd i lys neu dribiwnlys",
   "h1": "Ni ellir dod o hyd i'r dudalen",
   "p1": "Os bu ichi deipio'r cyfeiriad gwefan, gwiriwch ei fod yn gywir.",
   "p2": "Os bu ichi ludo'r cyfeiriad gwefan, gwiriwch eich bod wedi copïo'r cyfeiriad yn gyfan."
